iterable row results and improved pagination support